# nexus

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md  release.toml  turbo_setting
nexus-ascii/: CHANGELOG.md  Cargo.toml
nexus-ascii/src/: flat_string.rs  lib.rs  string.rs
nexus-async-net/: BENCHMARKS.md  CHANGELOG.md  Cargo.toml  README.md
nexus-async-net/benches/: bench_pool_throughput.rs  perf_async_ws.rs  perf_async_ws_nexus.rs  perf_ws_cycles_nexus.rs  perf_ws_cycles_tokio.rs
nexus-async-net/examples/: perf_async_ws.rs
nexus-async-net/src/: lib.rs  wire.rs
nexus-async-net/src/maybe_tls/: nexus.rs
nexus-async-rt/: BENCHMARKS.md  CHANGELOG.md  Cargo.toml  README.md
nexus-async-rt/benches/: channel.rs  executor.rs
nexus-async-rt/docs/: SHUTDOWN.md  tokio-compat.md
nexus-async-rt/src/: alloc.rs  backoff.rs  cancel.rs  context.rs  cross_wake.rs  io.rs  lib.rs  runtime.rs  shutdown.rs  task.rs  timer.rs  tokio_compat.rs  waker.rs  world_ctx.rs
nexus-async-rt/src/channel/: local.rs  mpsc.rs  mpsc_bytes.rs  spsc.rs  (+1 more)
nexus-async-rt/tests/: cancel_alloc_count.rs  cancel_fuzz.rs  channel.rs  channel_deadlock.rs  channel_fuzz.rs  channel_latency.rs  dispatch_histo.rs  intrusive_mpsc_spike.rs  join_handle_stress.rs  miri_alloc.rs  miri_cancel.rs  miri_channel.rs  miri_cross_wake.rs  miri_task.rs  miri_waker.rs  net_tcp.rs  net_udp.rs  shutdown_quiesce.rs  shutdown_stats.rs  slab_shutdown_bug.rs  stress_fuzz.rs  tokio_compat.rs  vs_tokio.rs  vs_tokio_dispatch.rs
nexus-collections/: BENCHMARKS.md  CHANGELOG.md  Cargo.toml  README.md
nexus-collections/benches/: perf_batched.rs  perf_btree.rs  perf_codegen.rs  perf_heap_cycles.rs  perf_list_cycles.rs  perf_push_hist.rs  perf_push_stat.rs  perf_rbtree.rs  perf_std_btreemap.rs
nexus-collections/src/: btree.rs  rbtree.rs
nexus-collections/tests/: btree_test.rs  heap_test.rs  list_test.rs  rbtree_test.rs
nexus-decimal/: CHANGELOG.md  Cargo.toml
nexus-decimal/benches/: arithmetic.rs
nexus-decimal/src/: arithmetic.rs  bytes.rs  financial.rs  from_int.rs  lib.rs  rounding.rs
nexus-decimal/tests/: arithmetic.rs  financial.rs  financial_props.proptest-regressions  financial_props.rs  from_int.rs  mul_div.rs  pow2_props.rs
nexus-fix-codec/: BENCHMARKS.md  CHANGELOG.md  Cargo.toml  PERF_CATALOG.md  README.md
nexus-fix-codec/benches/: parse_types.rs  perf_parse_cycles.rs
nexus-fix-codec/examples/: perf_scan.rs
nexus-fix-codec/src/: dict.rs  error.rs  field.rs  header.rs  lib.rs  reader.rs  types.rs  writer.rs
nexus-fix-codec/tests/: property.rs
nexus-id/: BENCHMARKS.md  CHANGELOG.md  Cargo.toml  README.md
nexus-id/benches/: perf_benchmark.rs  perf_id_hashing.rs  perf_snowflake.rs  perf_uuid.rs
nexus-id/src/: encode.rs  lib.rs  parse.rs  serde_impl.rs  types.rs
nexus-inference/: CHANGELOG.md  Cargo.toml  PERF_CATALOG.md  README.md
nexus-inference/benches/: predict_bench.rs  temporal_bench.rs
nexus-inference/docs/: INDEX.md
nexus-inference/examples/: gbdt_tail.rs
nexus-inference/scripts/: test-simd.sh
nexus-inference/src/: activation.rs  bnn.rs  error.rs  gbdt.rs  lib.rs  lut.rs  mlp.rs  quantized_mlp.rs  ssm.rs
nexus-inference/tests/: lightgbm_integration.rs  safetensors_integration.rs
nexus-logbuf/: BENCHMARKS.md  CHANGELOG.md  Cargo.toml
nexus-logbuf/benches/: perf_mpsc_latency.rs  perf_spsc_latency.rs
nexus-logbuf/src/: lib.rs
nexus-net/: CHANGELOG.md  Cargo.toml  README.md
nexus-net/docs/: INDEX.md  overview.md  tls.md
nexus-net/src/: lib.rs  maybe_tls.rs  wire.rs
nexus-pool/: BENCHMARKS.md  CHANGELOG.md  Cargo.toml  README.md
nexus-pool/benches/: perf_local_pool.rs  perf_sync_pool.rs
nexus-pool/src/: lib.rs  local.rs  sync.rs
nexus-queue/: BENCHMARKS.md  CHANGELOG.md  Cargo.toml
nexus-queue/benches/: bench_crossbeam.rs  bench_mpsc.rs  bench_mpsc_pingpong.rs  bench_rtrb.rs  bench_spmc.rs  bench_spsc.rs
nexus-queue/src/: mpsc.rs  spmc.rs  spsc.rs
nexus-queue/tests/: loom_mpsc.rs
nexus-rate/: BENCHMARKS.md  CHANGELOG.md  Cargo.toml  README.md
nexus-rate/benches/: perf_rate.rs
nexus-rt/: CHANGELOG.md  Cargo.toml
nexus-rt/benches/: dispatch.rs
nexus-rt/examples/: dag.rs  mio_timer.rs  perf_construction.rs  perf_scheduler.rs  scheduler_dag.rs
nexus-rt/src/: ctx_dag.rs  ctx_pipeline.rs  dag.rs  pipeline.rs  reactor.rs  resource.rs  scheduler.rs  timer.rs  world.rs
nexus-rt/tests/: compile_tests.rs  derive_param.rs  miri_tests.rs
nexus-shm/: CHANGELOG.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT
nexus-shm/benches/: journal.rs  ofd_liveness.rs
nexus-shm/src/: error.rs  lib.rs  lock.rs  pod.rs  region.rs  segment.rs
nexus-slot/: CHANGELOG.md  Cargo.toml
nexus-slot/src/: lib.rs  loom_impl.rs  spmc.rs  spsc.rs
nexus-slot/tests/: loom_spmc.rs  loom_spsc.rs
nexus-stats/: CHANGELOG.md  Cargo.toml  README.md
nexus-stats-core/: CHANGELOG.md  Cargo.toml  README.md
nexus-stats-core/docs/: INDEX.md  normalization.md  statistics.md
nexus-stats-core/src/: lib.rs  math.rs
nexus-stats-detection/: CHANGELOG.md  Cargo.toml
nexus-stats-detection/src/: adwin.rs  bocpd.rs  dist_drift.rs  lib.rs  mosum.rs  multi_gate.rs  page_hinkley.rs  simd_math.rs
nexus-stats-regression/: CHANGELOG.md  Cargo.toml  README.md
nexus-stats-smoothing/: CHANGELOG.md  Cargo.toml
nexus-stats-smoothing/src/: huber_ema.rs  kalman1d.rs
nexus-stats/benches/: update_bench.rs
nexus-stats/examples/: perf_stats.rs
nexus-stats/src/: lib.rs
nexus-stats/tests/: compile_tests.rs
nexus-timer/: BENCHMARKS.md  CHANGELOG.md  Cargo.toml
nexus-timer/benches/: perf_timer.rs
nexus-timer/src/: wheel.rs
nexus-web/: CHANGELOG.md  Cargo.toml  README.md
nexus-web/benches/: frame_reader.rs  frame_writer.rs  rest.rs
nexus-web/docs/: errors.md  http.md  patterns.md  performance.md  websocket.md
nexus-web/examples/: bench_loopback_rest.rs  perf_body_writer.rs  perf_rest.rs  perf_throughput.rs  perf_tls.rs  perf_vs_tungstenite.rs  perf_ws.rs  throughput_rest.rs
nexus-web/fuzz/: Cargo.toml
nexus-web/src/: lib.rs
nexus-web/tests/: autobahn.rs  httpbin.rs  wss_echo.rs
(+399 files in other folders)
