[workspace]
resolver = "2"
exclude = [
]
members = [
	"nexus-rt",
	"nexus-rt-derive",
	"nexus-timer",
	"nexus-ascii",
	"nexus-bits",
	"nexus-bits-derive",
	"nexus-channel",
	"nexus-id",
	"nexus-logbuf",
	"nexus-pool",
	"nexus-queue",
	"nexus-slab",
	"nexus-slot",
	"nexus-smartptr",
	"nexus-stats",
	"nexus-stats-core",
	"nexus-stats-smoothing",
	"nexus-stats-detection",
	"nexus-stats-regression",
	"nexus-stats-control",
	"nexus-rate",
	"nexus-notify",
	"nexus-decimal",
	"nexus-net",
	"nexus-async-net",
	"nexus-collections",
	"nexus-async-rt",
	"nexus-inference",
]

[workspace.package]
edition = "2024"
rust-version = "1.90"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Abso1ut3Zer0/nexus"
keywords = ["lock-free", "concurrent", "data-structures", "trading"]
categories = ["concurrency", "data-structures"]

[workspace.dependencies]
crossbeam-utils = "0.8.21"
hdrhistogram = "7.5"
seq-macro = "0.3"

[workspace.lints.rust]
unsafe_op_in_unsafe_fn = "warn"
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(loom)'] }

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
# Documentation lints - allow for now
missing_errors_doc = "allow"
missing_panics_doc = "allow"
# Pedantic lints - allow for cleaner codebase
inline_always = "allow"
must_use_candidate = "allow"
cast_possible_truncation = "allow"
cast_sign_loss = "allow"
cast_precision_loss = "allow"
cast_lossless = "allow"
missing_const_for_fn = "allow"
doc_markdown = "allow"
module_name_repetitions = "allow"
similar_names = "allow"
too_many_lines = "allow"
cognitive_complexity = "allow"
missing_fields_in_debug = "allow"
# Style preferences
use_self = "allow"
ref_as_ptr = "allow"
ptr_as_ptr = "allow"
redundant_pub_crate = "allow"
uninlined_format_args = "allow"
return_self_not_must_use = "allow"
manual_range_contains = "allow"
needless_range_loop = "allow"
wildcard_imports = "allow"
cast_possible_wrap = "allow"
cast_ptr_alignment = "allow"
significant_drop_tightening = "allow"
