[package]
name = "nexus-ascii"
version = "1.6.2"
description = "Fixed-capacity ASCII strings for high-performance systems"
readme = "README.md"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
keywords = ["ascii", "strings", "high-performance"]
categories = ["data-structures", "no-std"]

[package.metadata.docs.rs]
all-features = true

[lints]
workspace = true

[features]
default = ["std"]
std = []
nohash = ["dep:nohash-hasher", "std"]
serde = ["dep:serde"]
bytes = ["dep:bytes", "std"]

[dependencies]
nohash-hasher = { version = "0.2.0", optional = true }
serde = { version = "1.0", default-features = false, features = ["derive"], optional = true }
bytes = { version = "1.0", optional = true }

[dev-dependencies]
ahash = "0.8"
ascii = "1"
nohash-hasher = "0.2.0"
rustc-hash = "2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[[example]]
name = "perf_serde"
required-features = ["serde"]

[[example]]
name = "perf_hashmap"
required-features = ["nohash"]

[[example]]
name = "perf_nohash_vs_fx"
required-features = ["nohash"]
