[package]
name = "nexus-async-rt"
version = "0.7.0"
description = "Experimental single-threaded async executor (reference implementation; tokio is the supported path for production use)"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[features]
default = []
tokio-compat = ["dep:tokio"]

[dependencies]
libc = "0.2"
mio = { version = "1", features = ["os-poll", "net"] }
nexus-rt = { version = "2.0.0", path = "../nexus-rt" }
slab = "0.4"
nexus-logbuf = { version = "2.2.0", path = "../nexus-logbuf" }
nexus-queue = { version = "1.2.0", path = "../nexus-queue" }
nexus-slab = { version = "2.3.1", path = "../nexus-slab" }
nexus-timer = { version = "1.4.0", path = "../nexus-timer" }
signal-hook = "0.3"
socket2 = { version = "0.5", features = ["all"] }
tokio = { version = "1", features = ["rt-multi-thread", "net", "io-util", "time", "sync"], optional = true }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
hdrhistogram = { workspace = true }
tokio = { version = "1", features = ["rt", "net", "io-util", "time", "macros"] }

[[bench]]
name = "executor"
harness = false

[[bench]]
name = "channel"
harness = false

[lints]
workspace = true
