[package]
name = "nexus-decimal"
version = "1.1.0"
description = "Fixed-point decimal arithmetic with compile-time precision"
readme = "README.md"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[features]
default = ["std"]
std = []
serde = ["dep:serde"]
num-traits = ["dep:num-traits"]

[dependencies]
serde = { version = "1", default-features = false, optional = true, features = ["derive"] }
num-traits = { version = "0.2", default-features = false, optional = true }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
fixdec = "0.1"
proptest = "1.4"
rust_decimal = "1.40.0"
serde_json = "1"
trybuild = "1"

[[bench]]
name = "arithmetic"
harness = false

[[bench]]
name = "parsing"
harness = false

[[bench]]
name = "comparison"
harness = false

[lints]
workspace = true
