[package]
name = "nexus-id"
version = "1.1.4"
description = "High-performance ID generators for low-latency systems"
readme = "README.md"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[lints]
workspace = true

[features]
default = ["std"]
std = ["dep:getrandom"]
serde = ["dep:serde"]
uuid = ["dep:uuid"]
bytes = ["dep:bytes"]

[dependencies]
nexus-ascii = { version = "1.4", default-features = false }
getrandom = { version = "0.2", optional = true }
serde = { version = "1", features = ["derive"], optional = true }
uuid = { version = "1", default-features = false, optional = true }
bytes = { version = "1", default-features = false, optional = true }

[dev-dependencies]
hdrhistogram = "7.5"
rustc-hash = "2"
ahash = "0.8"
serde_json = "1"

[[bench]]
name = "perf_snowflake"
harness = false

[[bench]]
name = "perf_id_hashing"
harness = false

[[bench]]
name = "perf_uuid"
harness = false

[[bench]]
name = "perf_benchmark"
harness = false
