[package]
name = "nexus-inference"
version = "0.1.0"
description = "ML inference engine for pre-trained models"
readme = "README.md"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
keywords = ["inference", "machine-learning", "gbdt", "lightgbm", "trading"]
categories = ["algorithms", "science"]

[features]
default = ["std"]
std = ["alloc"]
alloc = []
libm = ["alloc", "dep:libm"]
loader-lightgbm = ["alloc"]

[dependencies]
libm = { version = "0.2", optional = true }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "predict_bench"
harness = false
required-features = ["loader-lightgbm"]

[lints]
workspace = true
