[package]
name = "nexus-inference"
version = "0.1.0"
description = "ML inference engine for pre-trained models"
readme = "README.md"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
keywords = ["inference", "machine-learning", "gbdt", "lightgbm", "trading"]
categories = ["algorithms", "science"]

[features]
default = ["safetensors", "loader-lightgbm"]
loader-lightgbm = []
safetensors = ["dep:safetensors"]

[dependencies]
safetensors = { version = "0.7", default-features = false, optional = true }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
serde_json = "1"

[[bench]]
name = "predict_bench"
harness = false
required-features = ["loader-lightgbm"]

[lints]
workspace = true

[[bench]]
name = "temporal_bench"
harness = false

[[example]]
name = "gbdt_tail"
required-features = ["loader-lightgbm"]
