[package]
name = "nexus-logbuf"
version = "2.2.0"
description = "Lock-free SPSC and MPSC byte ring buffers for logging and archival"
readme = "README.md"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
keywords = ["spsc", "mpsc", "ring-buffer", "queue", "lock-free"]
categories = ["concurrency", "data-structures"]

[lints]
workspace = true

[dependencies]
crossbeam-utils.workspace = true

[dev-dependencies]
hdrhistogram = "7.5"
rand = "0.8"

[[example]]
name = "throughput_bench"

[[bench]]
name = "perf_spsc_latency"
harness = false

[[bench]]
name = "perf_mpsc_latency"
harness = false

