[package]
name = "nexus-net"
version = "0.8.0"
description = "Low-latency networking primitives: buffers, TLS codec, wire abstractions."
readme = "README.md"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[features]
default = []
full = ["tls", "bytes"]
tls = ["dep:rustls", "dep:rustls-native-certs"]
bytes = ["dep:bytes"]

[package.metadata.docs.rs]
all-features = true

[dependencies]
bytes = { version = "1", optional = true }
rustls = { version = "0.23", default-features = false, features = ["std", "tls12", "aws_lc_rs"], optional = true }
rustls-native-certs = { version = "0.8", optional = true }

[[example]]
name = "perf_buf"

[dev-dependencies]
rcgen = "0.13"
rustls = { version = "0.23", features = ["std", "tls12", "aws_lc_rs"] }

[lints]
workspace = true
