[package]
name = "nexus-pool"
version = "1.0.4"
description = "High-performance object pools for low latency systems"
readme = "README.md"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[lints]
workspace = true

[dev-dependencies]
hdrhistogram = "7.5"

[[bench]]
name = "perf_local_pool"
harness = false

[[bench]]
name = "perf_sync_pool"
harness = false

