[package]
name = "nexus-queue"
version = "1.3.1"
description = "High-performance lock-free SPSC and MPSC queues for low-latency systems"
readme = "README.md"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
keywords = ["spsc", "mpsc", "ring-buffer", "queue", "lock-free"]
categories = ["concurrency", "data-structures", "no-std"]

[dependencies]
crossbeam-utils.workspace = true

[dev-dependencies]
crossbeam-queue = "0.3"
hdrhistogram = "7.5"
rtrb = "0.3"

[lints]
workspace = true

[[bench]]
name = "bench_spsc"
harness = false

[[bench]]
name = "bench_rtrb"
harness = false

[[bench]]
name = "bench_crossbeam"
harness = false

[[bench]]
name = "bench_mpsc"
harness = false

[[bench]]
name = "bench_mpsc_pingpong"
harness = false

[[bench]]
name = "bench_spmc"
harness = false
