[package]
name = "nexus-rate"
version = "2.1.2"
description = "Rate limiting and flow control primitives for real-time systems"
readme = "README.md"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]

[[bench]]
name = "perf_rate"
harness = false

[lints]
workspace = true
