[package]
name = "nexus-rt"
version = "2.3.0"
description = "Single-threaded, event-driven runtime primitives with pre-resolved dispatch"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[features]
full = ["smartptr", "timer", "mio", "signals", "reactors"]
codegen-audit = []
smartptr = ["dep:nexus-smartptr"]
timer = ["dep:nexus-timer"]
mio = ["dep:mio", "dep:slab"]
signals = ["dep:signal-hook"]
reactors = ["dep:nexus-notify", "dep:slab"]

[package.metadata.docs.rs]
all-features = true

[dependencies]
nexus-rt-derive = { version = "1.2", path = "../nexus-rt-derive" }
nexus-notify = { version = "1.0", path = "../nexus-notify", optional = true }
rustc-hash = "2"
slab = { version = "0.4", optional = true }
nexus-smartptr = { version = "0.1", path = "../nexus-smartptr", optional = true }
nexus-timer = { version = "1.2", path = "../nexus-timer", optional = true }
mio = { version = "1", features = ["os-poll", "net"], optional = true }
signal-hook = { version = "0.3", optional = true }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
mio = { version = "1", features = ["os-poll", "net"] }
trybuild = "1"

[[bench]]
name = "dispatch"
harness = false

[[example]]
name = "mio_timer"
required-features = ["mio", "timer"]

[[example]]
name = "reactors"
required-features = ["reactors"]

[[example]]
name = "perf_reactors"
required-features = ["reactors"]

[lints]
workspace = true
