[package]
name = "nexus-slot"
version = "1.1.2"
description = "High-performance conflation slots (SPSC + SPMC) for latest-value-wins scenarios"
readme = "README.md"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[target.'cfg(loom)'.dependencies]
loom = "0.7"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
crossbeam-queue = "0.3"
hdrhistogram = "7.5"
seqlock = "0.2"

[lints]
workspace = true

[[bench]]
name = "perf_slot"
harness = false

[[bench]]
name = "perf_slot_latency"
harness = false

[[bench]]
name = "profile_slot"
harness = false
