[package]
name = "nexus-stats-core"
version = "2.2.0"
description = "Core types and utilities shared across nexus-stats subcrates"
readme = "README.md"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[features]
default = ["std"]
std = ["alloc"]
alloc = []
libm = ["dep:libm"]

[dependencies]
libm = { version = "0.2", optional = true }

[lints]
workspace = true
