[package]
name = "nexus-stats-regression"
version = "1.3.0"
description = "Online regression, learning, and estimation for nexus-stats"
readme = "README.md"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[features]
default = ["std"]
std = ["nexus-stats-core/std", "alloc"]
alloc = ["nexus-stats-core/alloc"]
libm = ["nexus-stats-core/libm"]

[dependencies]
nexus-stats-core = { version = "2.0.0", path = "../nexus-stats-core", default-features = false }

[lints]
workspace = true
