[package]
name = "nexus-stats-smoothing"
version = "1.2.3"
description = "Advanced smoothing algorithms for nexus-stats: KAMA, Holt, Spring, Kalman1d, WindowedMedian"
readme = "README.md"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[features]
default = ["std"]
std = ["nexus-stats-core/std", "alloc"]
alloc = ["nexus-stats-core/alloc"]

[dependencies]
nexus-stats-core = { version = "2.2.0", path = "../nexus-stats-core", default-features = false }

[lints]
workspace = true
