[package]
name = "nexus-stats-smoothing"
version = "2.0.0"
description = "Advanced smoothing algorithms for nexus-stats: KAMA, Holt, Spring, Kalman1d, WindowedMedian"
readme = "README.md"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[features]
default = ["std"]
std = ["nexus-stats-core/std", "alloc"]
alloc = ["nexus-stats-core/alloc"]

[dependencies]
nexus-stats-core = { version = "3.0.1", path = "../nexus-stats-core", default-features = false }

[lints]
workspace = true
