[package]
name = "nexus-web"
version = "0.8.0"
description = "Low-latency WebSocket, HTTP/1.1, and REST primitives. Sans-IO, zero-copy, SIMD-accelerated."
readme = "README.md"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[features]
default = []
full = ["tls", "socket-opts", "bytes"]
tls = ["nexus-net/tls"]
socket-opts = ["dep:socket2"]
bytes = ["dep:bytes", "nexus-net/bytes"]

[package.metadata.docs.rs]
all-features = true

[dependencies]
nexus-net = { version = "0.8.0", path = "../nexus-net" }
httparse = "1"
sha1 = "0.10"
simdutf8 = "0.1"
getrandom = "0.3"
rand_chacha = { version = "0.9", default-features = false }
rand_core = { version = "0.9", default-features = false }
bytes = { version = "1", optional = true }
socket2 = { version = "0.5", optional = true }

[[example]]
name = "perf_ws"

[[example]]
name = "perf_vs_tungstenite"

[[example]]
name = "perf_throughput"
required-features = ["tls"]

[[example]]
name = "perf_tls"
required-features = ["tls"]

[[example]]
name = "perf_rest"

[[example]]
name = "bench_loopback_rest"

[[example]]
name = "perf_body_writer"

[[example]]
name = "throughput_rest"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
tungstenite = { version = "0.29", features = ["rustls-tls-native-roots"] }
tokio-tungstenite = "0.26"
tokio = { version = "1", features = ["rt", "net", "io-util", "time", "macros"] }
reqwest = { version = "0.12", features = ["blocking", "json"] }
nexus-async-web = { path = "../nexus-async-web" }
futures-util = "0.3"
hdrhistogram = { workspace = true }
rcgen = "0.13"
rustls = { version = "0.23", features = ["std", "tls12", "aws_lc_rs"] }
rustls-pemfile = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sonic-rs = "0.3"

[[bench]]
name = "frame_reader"
harness = false

[[bench]]
name = "frame_writer"
harness = false

[[bench]]
name = "rest"
harness = false

[lints]
workspace = true
