[package]
name = "nexus-web-fuzz"
version = "0.0.0"
publish = false
edition = "2024"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"

[dependencies.nexus-web]
path = ".."
features = ["tls"]

# Prevent the workspace from trying to build this
[workspace]

[[bin]]
name = "fuzz_response_reader"
path = "fuzz_targets/fuzz_response_reader.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_request_writer"
path = "fuzz_targets/fuzz_request_writer.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_keepalive_sequence"
path = "fuzz_targets/fuzz_keepalive_sequence.rs"
test = false
doc = false
bench = false
